[package]
name = "sort_visualiser"
version = "0.1.0"
authors = ["eggmund <joshuacolclough2@googlemail.com>"]
edition = "2018"

[dependencies]
nannou = "0.11"
nannou_audio = "0.2"
shaderc = "0.6"
shrinkwraprs = "0.2"
radix = "0.5"
yaml-rust = "0.4"

[features]
shaderc_fix = ["shaderc/build-from-source"]
