[package]
name = "sort_visualiser"
version = "0.1.0"
authors = ["eggmund <joshuacolclough2@googlemail.com>"]
edition = "2018"

[dependencies]
audrey = "0.3"
nannou = "0.15"
shaderc = "0.7.2"
shrinkwraprs = "0.3"
radix = "0.6"
yaml-rust = "0.4.5"

[features]
shaderc_fix = ["shaderc/build-from-source"]
